# China-trend

./: .gitignore  README.md  pyproject.toml
.github/workflows/: china-trends.yml
docs/: feed.xml  index.html  seen.json
src/: feed_writer.py  fetcher.py  main.py  scorer.py  summarizer.py
tests/: test_scorer.py
