[project]
name = "china-trends"
version = "0.1.0"
description = "Chinese media trend digest — RSS feed generator"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40.0",
    "feedparser>=6.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
